--- a/config/sensors.yaml
+++ b/config/sensors.yaml
@@ -12,7 +12,7 @@
             {% endif %}
           friendly_name: 'Onkyo Volume'
     - platform: synologydsm
-      host: 192.168.1.50
+      host: !secret synologydsm-ip
       username: !secret synology_username
       password: !secret synology_password
       monitored_conditions:
